Another attempt at fixing icons alignment

--- a/tobias/tobiasfyi/static/sass/tobiasfyi.scss
+++ b/tobias/tobiasfyi/static/sass/tobiasfyi.scss
@@ -251,7 +251,8 @@
   ul.contact-icons {
     list-style: none;
     display: flex;
-    margin: 0;
+    margin-bottom: 0;
+    margin-left: 0;
     li {
       padding: 1rem;
       
